Prevent horizontal scrolling in Queue list

--- a/src/routes/Queue/components/QueueView.css
+++ b/src/routes/Queue/components/QueueView.css
@@ -1,6 +1,7 @@
 .flexContainer {
   display: flex;
   flex-direction: column;
+  width: 100%;
 }
 
 .scrollable {
